--- a/index.html
+++ b/index.html
@@ -55,17 +55,7 @@
 
 En el sistema binario, los números se construyen de manera similar a los sistemas decimales, pero con potencias de 2 en lugar de 10. Por ejemplo, el número binario 101 significa 1×2² + 0×2¹ + 1×2⁰, lo que equivale a 5 en el sistema decimal. Gracias a este sistema, es posible realizar operaciones matemáticas y lógicas que permiten a las computadoras ejecutar programas, realizar cálculos complejos y manejar grandes cantidades de datos de manera eficiente.</p>
 
-      <p>Concepto básico: El sistema binario es un sistema numérico que utiliza solo dos dígitos: 0 y 1. Es la base fundamental de la computación digital.</p>
-
-      <p>Representación de datos: En el sistema binario, todos los datos y comandos en una computadora se representan como combinaciones de ceros y unos.</p>
-      
-      <p>Conversiones: Los números decimales se pueden convertir a binario mediante divisiones sucesivas por 2, mientras que la conversión inversa implica multiplicaciones por potencias de 2.</p>
-
-      <p>Aritmética binaria: Las operaciones matemáticas como suma, resta, multiplicación y división también se pueden realizar en binario, siguiendo reglas similares a las del sistema decimal.</p>
-
-      <p>Circuitos lógicos: Los circuitos electrónicos, como puertas AND, OR y NOT, operan en binario, utilizando el estado encendido (1) y apagado (0) para procesar información.</p>
-
-        <img src="https://static.wixstatic.com/media/58e444_8bf8eea3a03f46a58052b02de7cced44~mv2.jpg/v1/fill/w_282,h_547,al_c,q_80,enc_auto/58e444_8bf8eea3a03f46a58052b02de7cced44~mv2.jpg">
+       <img src="https://static.wixstatic.com/media/58e444_8bf8eea3a03f46a58052b02de7cced44~mv2.jpg/v1/fill/w_282,h_547,al_c,q_80,enc_auto/58e444_8bf8eea3a03f46a58052b02de7cced44~mv2.jpg" alt="Tabla de Códigos Binarios.">
     </section>
 
     <section id="tipos-datos" class="tab-content">
@@ -97,7 +87,7 @@ Otro tipo importante son las **cadenas de texto** (string), que representan secu
         <p>La **tecnología análoga** se basa en la representación continua de la información. En este tipo de tecnología, las señales varían de manera continua y pueden tomar infinitos valores dentro de un rango. Un ejemplo común de tecnología análoga es el sonido en un disco de vinilo, donde las variaciones en la superficie del disco representan directamente las ondas sonoras. La señal análoga es sensible a interferencias y ruido, lo que puede degradar la calidad de la transmisión o almacenamiento de datos. Aunque ha sido ampliamente usada en dispositivos como radios, televisores antiguos y grabadoras de audio, la tecnología análoga ha sido reemplazada en gran medida por la digital en muchas aplicaciones debido a sus limitaciones.
 
 La **tecnología digital**, en cambio, utiliza señales discretas, representadas generalmente por el sistema binario (0 y 1). En lugar de una variación continua, la información se codifica en bits que pueden tener solo dos estados, lo que facilita la transmisión y almacenamiento sin pérdida significativa de calidad. Esta tecnología es menos susceptible al ruido y las interferencias, lo que permite una mayor precisión y fiabilidad en la transmisión de datos. La tecnología digital es la base de dispositivos modernos como computadoras, teléfonos móviles, televisores de alta definición y sistemas de comunicación. Su capacidad para procesar grandes cantidades de datos con rapidez y eficiencia ha sido clave en el desarrollo de la era digital.</p>
-        <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiYZbDquyx8c_t2fXMD9C3f8b6SIFEZJdTD-30oGZHQdpTD2OrwsZkXTdo2WbcvU1j2dU3EsytqcASclGIx5mFeumqcIgpslBWyuxp2QxVKbpDPklaiGB-8agfxlIKvWpywRF8S0KJ19g/s581/anadigital.jpg" class="responsive-img">
+        <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiYZbDquyx8c_t2fXMD9C3f8b6SIFEZJdTD-30oGZHQdpTD2OrwsZkXTdo2WbcvU1j2dU3EsytqcASclGIx5mFeumqcIgpslBWyuxp2QxVKbpDPklaiGB-8agfxlIKvWpywRF8S0KJ19g/s581/anadigital.jpg" alt="Descripción de la imagen">
     </section>
 
     <section id="hardware" class="tab-content">
@@ -146,6 +136,9 @@ El internet se basa en la arquitectura de cliente-servidor, donde los dispositiv
             showTab('sistema-binario');
         });
     </script>
+
+</body>
+</html>
 
 </body>
 </html>
