--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@ La **tecnología digital**, en cambio, utiliza señales discretas, representadas
         <p>El **hardware** se refiere a los componentes físicos de un sistema informático, es decir, las partes tangibles de una computadora u otros dispositivos electrónicos. Estos incluyen elementos como el procesador (CPU), que es el "cerebro" de la computadora y realiza todas las operaciones lógicas y aritméticas, la memoria RAM, que almacena temporalmente los datos y programas en uso para un acceso rápido, y el disco duro o almacenamiento sólido (SSD), que guarda de manera permanente la información del sistema, archivos y programas. Otros componentes de hardware importantes son la tarjeta gráfica (GPU), que procesa imágenes y gráficos, y la placa base, que conecta y permite la comunicación entre todos los componentes.
 
 El hardware también incluye los dispositivos periféricos, que permiten la interacción entre el usuario y la máquina. Estos periféricos pueden ser de entrada, como el teclado, el ratón o un escáner, que envían información al sistema, o de salida, como el monitor o la impresora, que permiten visualizar o recibir la información procesada. Además, hay dispositivos de almacenamiento externo, como memorias USB o discos duros portátiles, que permiten transportar o respaldar datos. El rendimiento y la funcionalidad de una computadora dependen en gran medida de la calidad y capacidad de sus componentes de hardware.</p>
-        <img src="https://i.pinimg.com/736x/61/db/b9/61dbb99f5566b9b4e2a2f8c97c1b3873.jpg" alt="Componentes de Hardware" class="responsive-img">
+        <img src="https://i.pinimg.com/736x/61/db/b9/61dbb99f5566b9b4e2a2f8c97c1b3873.jpg" alt="">
+
     </section>
 
     <section id="piramide" class="tab-content">
